data/repos_history/Kusimo4real/project-bedrock/2025-09-25T19:16:40Z/kubernetes/manifests/scaling-and-policies.yaml
# Network Policy
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: bedrock-api-netpol
  namespace: bedrock-app
spec:
  podSelector:
    matchLabels:
      app: bedrock-api
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          name: kube-system
    ports:
    - protocol: TCP
      port: 80
  egress:
  - {}  # Allow all outbound traffic
